--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
     <title>DSVendas</title>
   </head>
   <body>
-    <noscript>YVocê precisa habilitar o JavaScript para rodar este app.</noscript>
+    <noscript>Você precisa habilitar o JavaScript para rodar este app.</noscript>
     <div id="root"></div>
   </body>
 </html>
